--- a/src/missed-class-front/src/App.css
+++ b/src/missed-class-front/src/App.css
@@ -10,28 +10,13 @@
 
 .App{
     height: 100vh;
-    max-width: 100vw;
+    width: 100vw;
     background-color: #C3E4E9;
     text-align: center;
     font-family: Montagu Slab, serif;
     font-style: normal;
     font-size: 14px ;
-    color: #5D6366;
-    
-
-    
-}
-
-.Logo-img{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-}
-
-.logo{
-    display: flex;
-    margin-top: 30px;
+    color: #5D6366;   
 }
 
 .Boxes{
@@ -40,6 +25,7 @@
     justify-content: center;
     align-items: center;
     max-width: 100vw;
+    margin-top: 30px;
     
 
 }
@@ -47,18 +33,21 @@
     display: grid;
     font-size: 10px;
     margin-top: 10px;
-    margin-right: 130px;
+    margin-right: 320px;
+    
 
     
 }
 .Campo{
-    width: fit-content;
+    max-width: fit-content;
     margin: auto;
 }
 .Campo input{
+    width: 350px;
     padding: 10px;
     border-radius: 5px;
     border: 0px solid;
+    box-shadow: 2px 3px 3px rgb(111, 107, 107);
 }
 
 .Campo input::placeholder{
@@ -68,17 +57,35 @@
     font-size: 10px ;
 
 }
-
-.btn{
+.Campo button{
+    width: 370px;
     font-family: Arial, Helvetica, sans-serif;    
     padding: 10px;
-    border-radius: 5px;
     border: 0px solid;
-    width: 25%;
+    border-radius: 5px;
     background-color: #48BDC2;
     font-family: Montagu Slab, serif;
     font-style: normal;
     font-size: 11px ;
     color: #5D6366;
+    cursor: pointer;
+    margin-top: 20px;
+    box-shadow: 2px 3px 3px rgb(111, 107, 107);
+    
+}
 
+/* ----------------------------------------------------------------
+Turmas */
+
+.small-logo{
+    margin-top: 40px;      
+}
+.logoleft{
+    display: flex;
+    margin-left: 50px;
+}
+.container{
+    justify-content: center;
+    align-items: center;
+    text-align: center;
 }
