--- a/src/missed-class-front/src/App.css
+++ b/src/missed-class-front/src/App.css
@@ -8,10 +8,13 @@
     
 }
 
-.App{
-    height: 100vh;
-    width: 100vw;
+html body {
+    height: 100%;
+    width: 100%;
     background-color: #C3E4E9;
+}
+
+.App{
     text-align: center;
     font-family: Montagu Slab, serif;
     font-style: normal;
